add class for li

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                        <a href="">Իրադարձային</a>
                    </li>
                    <li>
-                       <a href="">Մշակույթ</a>
+                       <a class="ani" href="">Մշակույթ</a>
                    </li>
                    <li>
                        <a href="">Medicine</a>
